--- a/filepicker/src/main/res/values-es/strings.xml
+++ b/filepicker/src/main/res/values-es/strings.xml
@@ -20,5 +20,8 @@
     <string name="all_photos">Todas las fotos</string>
     <string name="all_videos">Todos los vídeos</string>
     <string name="all_files">Todos los ficheros</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="all_images">All iamges</string>
+    <string name="done">Done</string>
 
 </resources>
